Fixed overflow of author chip

--- a/frontend/src/components/Author/Author.css
+++ b/frontend/src/components/Author/Author.css
@@ -1,6 +1,6 @@
 .author-chip {
-    position: absolute;
-    bottom: 30px;
+    position: absolute !important;
+    bottom: 15px;
     left: 50%;
     transform: translateX(-50%);
     color: #eaeaea !important;
